--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ section h2.content-header {
   padding-bottom: 8px;
 }
 
-
 section h2.content-header:after {
   content: "";
   position: absolute;
@@ -27,4 +26,36 @@ section h2.content-header:after {
 
 section div.content-info {
   margin-top: 30px;
+}
+
+
+
+/* Scroll */
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+ /* Estilos track de scroll */
+body::-webkit-scrollbar-track {
+  background: #e1e1e1;
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track:hover, 
+body::-webkit-scrollbar-track:active {
+  background: #d4d4d4;
 }
