--- a/src/Content/Footer/footer.css
+++ b/src/Content/Footer/footer.css
@@ -4,16 +4,41 @@ footer {
     color: #ffff;
 }
 
+footer h4:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 20%;
+    transform: translateX(-50%);
+    height: 3px;
+    background: #ffff;
+    transition: 0.35s;
+}
+
+footer h4 {
+    position: relative;
+    padding-bottom: 10px;
+}
+
 footer ul {
     list-style-type:none;
     padding: 0;
     margin: 0;
-    font-size: 0.9em;
+    padding-top: 10px;
+    font-size: 0.9em;    
+    display: inline-block;
+    text-align: left;
 }
 
 footer a {
     color: #ffff;
     text-decoration: none !important;
+    font-weight: 300;
+}
+
+footer li {
+    color: #ffff;
     font-weight: 300;
 }
 
