--- a/src/Content/MissionAndVision/mv.css
+++ b/src/Content/MissionAndVision/mv.css
@@ -6,8 +6,7 @@ section#missionvision h2.content-header:after {
     background-color: #ffff;
 }
 
-section#missionvision, 
-section#missionvision h2.content-header {
+section#missionvision, section#missionvision h2.content-header {
     color: #ffff;
 }
 
