--- a/src/Content/OpenedX/openedx.css
+++ b/src/Content/OpenedX/openedx.css
@@ -9,11 +9,11 @@ section#openedx::after {
     bottom: 0;
     right: 0;
     position: absolute;
-    z-index: -1;  
+    z-index: -1;
 }
 
 section#openedx .show-more {
-    background: linear-gradient(90deg, rgba(0,179,255,1) 0%, rgba(0,241,255,1) 100%);
+    background: linear-gradient(90deg, rgba(0, 179, 255, 1) 0%, rgba(0, 241, 255, 1) 100%);
     border: none;
 }
 
