--- a/src/Extras/Language/selector.css
+++ b/src/Extras/Language/selector.css
@@ -1,6 +1,6 @@
 div.language-container {
-    background: rgb(0,179,255);
-    background: linear-gradient(90deg, rgba(0,179,255,1) 0%, rgba(0,241,255,1) 100%);
+    background: rgb(0, 179, 255);
+    background: linear-gradient(90deg, rgba(0, 179, 255, 1) 0%, rgba(0, 241, 255, 1) 100%);
     color: #ffff;
 }
 
