--- a/src/Content/Functionalities/functionalities.css
+++ b/src/Content/Functionalities/functionalities.css
@@ -11,6 +11,7 @@
     position: relative;
     background: #48b3ff24;
     color: #3a99dc;
+    word-spacing: -1px !important;
 }
 
 #functionalities .card-header:before {
