TopBar with platforms

--- a/src/Extras/Language/selector.css
+++ b/src/Extras/Language/selector.css
@@ -1,16 +1,10 @@
-div.language-container {
-    background: rgb(0, 179, 255);
-    background: linear-gradient(90deg, rgba(0, 179, 255, 1) 0%, rgba(0, 241, 255, 1) 100%);
-    color: #ffff;
-}
 
-.language-container select {
+.language-select {
     border: none;
     background: none;
     background-color: transparent;
     padding: 5px;
     color: #ffff;
-    position: sticky;
-    right: 4%;
     cursor: pointer;
+    margin-left: 20px;
 }
