--- a/src/Content/OpenedX/openedx.css
+++ b/src/Content/OpenedX/openedx.css
@@ -13,7 +13,7 @@ section#openedx::after {
 }
 
 section#openedx .show-more {
-    background: linear-gradient(90deg, rgba(0, 179, 255, 1) 0%, rgba(0, 241, 255, 1) 100%);
+    background: #00b3ff;
     border: none;
 }
 
@@ -23,7 +23,7 @@ section#openedx a {
 }
 
 section#openedx .card {
-    background-color: #48b3ff1a;
+    background-color: #ededec;
 }
 
 section#openedx .card-text {
