BlogComponent shows 4 last articles and a new button. ArticlesComponent has pagination

--- a/src/Content/Blog/blog.css
+++ b/src/Content/Blog/blog.css
@@ -1,6 +1,10 @@
 section#blog {
   background-color: #ecf0f5;
 }
+section#blog .show-all {
+  font-size: 0.6em;
+  float: right;
+}
 
 section#articles {
   background-color: #ecf0f5;
