--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -34,15 +34,42 @@ section#articles .card-text {
   font-size: 0.7em;
 }
 
+section#article .goback i{
+  text-decoration: none;
+  color: #888888;
+}
+
+section#article .goback {
+  font-size: 1.1em;
+  text-decoration: none;
+  color: #00b3ff;
+}
+
 section#article h2 {
   font-size: 3.5vw;
-  font-weight: 300;
+  font-weight: 700;
   text-align: left;
   color: #000;
 }
+
 
 section#article span {
   color: #00b3ff;
   font-weight: 300;
   font-size: 0.8em;
+}
+
+
+section#article p.post-date {
+  width: 100%; 
+  text-align: right; 
+  border-bottom: 1.5px solid #888888; 
+  line-height: 0.6em;
+  margin: 10px 0 20px; 
+} 
+
+section#article p.post-date span { 
+   background:#fff; 
+   padding:0 10px; 
+   color: #888888;
 }
