--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -10,6 +10,7 @@ section#articles {
   background-color: #ecf0f5;
 }
 
+
 section#articles .main-container {
   padding-bottom: 10em;
   z-index: 2;
@@ -39,6 +40,10 @@ section#article .goback i{
   color: #888888;
 }
 
+section#article .separator-margin {
+  margin-bottom: 250px;
+}
+
 section#article .goback {
   font-size: 1.1em;
   text-decoration: none;
@@ -46,11 +51,16 @@ section#article .goback {
 }
 
 section#article h2 {
-  font-size: 3.5vw;
+  font-size: 2.8em;
   font-weight: 700;
   text-align: left;
   color: #000;
 }
+
+section#article p, section#article ul, section#article h3 {
+  color: #392a28;
+}
+
 
 
 section#article span {
