--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -46,6 +46,10 @@ section#article .goback i{
   color: #888888;
 }
 
+section#article .tag{
+  margin-left: 5px;
+}
+
 section#article .separator-margin {
   margin-bottom: 250px;
 }
