--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -1,3 +1,6 @@
+section#last-articles {
+  background-color: rgb(233, 237, 242, 0.3);
+}
 section#blog {
   background-color: #ecf0f5;
 }
@@ -5,11 +8,6 @@ section#blog .show-all {
   font-size: 0.6em;
   float: right;
 }
-
-section#articles {
-  background-color: #ecf0f5;
-}
-
 
 section#articles .main-container {
   padding-bottom: 10em;
@@ -23,30 +21,86 @@ section#articles .main-container {
   }
 }
 
-section#articles .card {
-  min-width: 350px;
+.wrapper{
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 250px;
+  grid-template-areas: 
+  "content1 content1 content1 content1";
+  grid-gap: 0.6rem;
 }
 
-section#articles .card-text {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-  font-size: 0.7em;
+@media (max-width: 800px){
+  .wrapper{
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "content1";
+  }
+  
 }
 
-section#articles button.show-more {
+.grid-item:nth-child(1){
+  grid-area: content1;
+}
+
+.list-item{
+  height: 250px;
+}
+
+section#articles button.show-more, section#videos button.show-more {
   background: #00b3ff;
   border: none;
   border-radius: 15px;
 }
 
-section#article .goback i{
+.article {
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  text-decoration: none !important;
+}
+
+.article-content {
+  width: 100%;
+  text-align: left;
+  padding-left: 5px;
+  align-self: flex-end;
+  background: linear-gradient(to bottom, 	transparent, 	rgb(0,0,0));
+}
+.article-content span{
+  margin-right: 15px;
+  color: #fff;
+  background-color: #00b3ff;
+  padding: 2px 5px;
+  -webkit-box-shadow: 0px 0px 17px -3px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 17px -3px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 17px -3px rgba(0,0,0,0.75);
+}
+
+.article-content h2{
+  margin-top: 10px;
+  color: #fff;
+  font-weight: bold;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  font-size: 1rem;
+}
+
+.article-content p{
+  color: #fff;
+}
+
+section#article .goback i {
   text-decoration: none;
   color: #888888;
 }
 
-section#article .tag{
+section#article .tag {
   margin-left: 5px;
 }
 
@@ -67,11 +121,11 @@ section#article h2 {
   color: #000;
 }
 
-section#article p, section#article ul, section#article h3 {
+section#article p,
+section#article ul,
+section#article h3 {
   color: #392a28;
 }
-
-
 
 section#article span {
   color: #00b3ff;
@@ -79,17 +133,22 @@ section#article span {
   font-size: 0.8em;
 }
 
-
 section#article p.post-date {
-  width: 100%; 
-  text-align: right; 
-  border-bottom: 1.5px solid #888888; 
+  width: 100%;
+  text-align: right;
+  border-bottom: 1.5px solid #888888;
   line-height: 0.6em;
-  margin: 10px 0 20px; 
-} 
+  margin: 10px 0 20px;
+}
 
-section#article p.post-date span { 
-   background:#fff; 
-   padding:0 10px; 
-   color: #888888;
+section#article p.post-date span {
+  background: #fff;
+  padding: 0 10px;
+  color: #888888;
+}
+
+section#videos .main-container {
+  padding-bottom: 10em;
+  z-index: 2;
+  position: relative;
 }
