--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -9,68 +9,35 @@ section#blog .show-all {
   float: right;
 }
 
-section#articles .main-container {
-  padding-bottom: 10em;
-  z-index: 2;
-  position: relative;
-}
-
-@media (max-width: 800px) {
-  section#articles .main-container {
-    padding-bottom: 1em;
-  }
-}
-
-.wrapper{
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 250px;
-  grid-template-areas: 
-  "content1 content1 content1 content1";
-  grid-gap: 0.6rem;
-}
-
-@media (max-width: 800px){
-  .wrapper{
-    grid-template-columns: 1fr;
-    grid-template-areas: 
-    "content1";
-  }
-  
-}
-
-.grid-item:nth-child(1){
-  grid-area: content1;
-}
-
-.list-item{
-  height: 250px;
-}
-
 section#articles button.show-more, section#videos button.show-more {
   background: #00b3ff;
   border: none;
   border-radius: 15px;
 }
 
-.article {
+.list-item {
+  height: 300px;
+}
+
+.list-item .article {
   cursor: pointer;
   display: flex;
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
+  background-size: cover;
   text-decoration: none !important;
 }
 
-.article-content {
+.list-item .article-content {
+  font-size: 0.7em;
   width: 100%;
   text-align: left;
   padding-left: 5px;
   align-self: flex-end;
-  background: linear-gradient(to bottom, 	transparent, 	rgb(0,0,0));
+  background: linear-gradient(to bottom, 	transparent, 	#3a3f42);
 }
-.article-content span{
+.list-item .article-content span{
   margin-right: 15px;
   color: #fff;
   background-color: #00b3ff;
@@ -80,7 +47,7 @@ section#articles button.show-more, section#videos button.show-more {
   box-shadow: 0px 0px 17px -3px rgba(0,0,0,0.75);
 }
 
-.article-content h2{
+.list-item .article-content h2{
   margin-top: 10px;
   color: #fff;
   font-weight: bold;
@@ -88,8 +55,11 @@ section#articles button.show-more, section#videos button.show-more {
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
-  font-size: 1rem;
+  font-size: 1.5em;
 }
+
+
+/* ARTICLE */
 
 .article-content p{
   color: #fff;
@@ -147,8 +117,3 @@ section#article p.post-date span {
   color: #888888;
 }
 
-section#videos .main-container {
-  padding-bottom: 10em;
-  z-index: 2;
-  position: relative;
-}
