--- a/src/Content/Navbar/navbar.css
+++ b/src/Content/Navbar/navbar.css
@@ -1,5 +1,6 @@
 nav a.navbar-brand {
   width: 300px;
+  max-width: 70vw;
 }
 
 nav img {
@@ -10,7 +11,7 @@ nav img {
 .button-menu {
   position: fixed;
   /* position: sticky; */
-  top: 40px;
+  top: 35px;
   right: 4%;
   height: 60px;
   width: 60px;
