--- a/src/Content/AboutEol/eol.css
+++ b/src/Content/AboutEol/eol.css
@@ -11,3 +11,35 @@ section#about-eol::after {
     position: absolute;
     z-index: -1;
 }
+
+.iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    /* Relación de aspecto 16:9 (9 dividido por 16 = 0.5625) */
+    overflow: hidden;
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+
+    .section-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+    .iframe-container {
+        max-width: 640px;
+        margin: 0 auto;
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
+}
