--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ section, footer {
   position: relative;
 }
 
+section a{
+  word-wrap: break-word;
+}
+
 /* Scroll */
 
 body::-webkit-scrollbar {
