fix: requested changes
- En IA en DI: Se cambia la ol por una dl (además se agrega dl al css para mantener el estilo similar al resto del articulo)
- Se reduce tamaño de imagen (no queda claro el tamaño específico asique se propone un cambio)
- Se eliminan los 2 comentarios en ArticleComponent.js
- articles.css: No queda claro el cambio a hacer.
- index.css: No indica cual es el cambio que afecta todo el sitio.
- ArticleComponent.js: Se indica que la constante "const author = article.author;" no se usa, pero si se eliminan se caen las páginas de los artículos.
- Se añade sombra a los títulos del carrusel para generar más contraste, exise la opcion de generarle un fondo oscuro pero quizas se come demasiado la imagen de fondo.
- Para la imagen de metaverso en el carrusel, se sugiere fuertemente editar la imagen ya que esta mal cropeada y no sé si vale la pena armar un css solo para ese pantallazo.

--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -48,6 +48,7 @@ section#articles button.show-more, section#videos button.show-more {
 
 .list-item .article-content h2{
   margin-top: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
   color: #fff;
   font-weight: bold;
   overflow: hidden;
@@ -97,6 +98,7 @@ section#article h2 {
 section#article p,
 section#article ul,
 section#article ol,
+section#article dl,
 section#article h3 {
   color: #392a28;
 }
