--- a/src/Content/Blog/articles.css
+++ b/src/Content/Blog/articles.css
@@ -76,8 +76,6 @@ section#article .tag {
 
 section#article .separator-margin {
   margin-bottom: 100px;
-  z-index:2;
-  position:relative;
 }
 
 section#article .goback {
@@ -127,28 +125,73 @@ section#article p.post-date span {
   text-align: justify;
 }
 
-section#article .tabla table {
-  width: 100%;
-  border-collapse: collapse;
-  margin: 20px 0;
-  color:#392a28;
-}
-section#article .tabla th, section#article .tabla td {
-  border: 1px solid black;
-  padding: 10px;
-  text-align: left;
-}
-section#article .tabla th {
-  background-color: #f2f2f2;
-} 
-
-section#article .tabla .fuente {
+section#article  .fuente {
   text-align: center;
   font-style: italic;
   margin-top: 10px;
   align-items: self-end;
   display: grid;
   justify-items: end;
+}
+
+section#article .card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+section#article .card {
+  flex: 1 1 calc(100% - 2rem);
+  background: #f9f9f9;
+  padding: 2rem;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+}
+
+.card h4 {
+  margin-top: 0;
+  color: #333;
+}
+
+@media (min-width: 768px) {
+  section#article .card-small { flex: 1 1 calc(48% - 2rem); }
+}
+@media (min-width: 1200px) {
+  section#article .card-small { flex: 1 1 calc(32% - 2rem); }
+}
+
+@media (min-width: 1024px) {
+  section#article .card-medium { flex: 1 1 calc(48% - 2rem); }
+}
+
+
+section#article .divTable {
+  display: block;
+  overflow:auto;
+  border-collapse: collapse;
+  color:#392a28
+}
+
+section#article .divTableBody {
+  display:inline-table;
+  width: 100%;
+}
+
+section#article .divTableRow {
+  display: table-row;
+}
+
+section#article .divTableCell, section#article .divTableHead {
+  display: table-cell;
+  padding: 10px;
+  border: 1px solid #999;
+  text-align: left;
+}
+
+section#article .divTableHead {
+  background-color: #EEE;
+  font-weight: bold;
 }
 
 section#article .team-member span{
