--- a/src/Extras/Separators/separatortop.css
+++ b/src/Extras/Separators/separatortop.css
@@ -5,7 +5,8 @@
     width: 100%;
     overflow: hidden;
     line-height: 0;
-    z-index: 1;
+    z-index: -1;
+    user-select:none;
 }
 
 .separator-top img {
