--- a/src/Content/Team/team.css
+++ b/src/Content/Team/team.css
@@ -23,14 +23,18 @@ section#team .main-container {
     font-size: 0.9em;
 }
 
+.team-member .user-data {
+    position: relative;
+}
+
 /* .team-member:hover img {
     animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
 } */
 
 .team-member img {
     position: absolute;
-    left: 0px;
-    top: 0;
+    left: -110px;
+    top: -22px;
     width: 120px;
     height: 117px;
     border-radius: 50%;
